kubernetes/apps/flux-system/addons/webhooks/github/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook
  namespace: flux-system
  annotations:
    hajimari.io/enable: "false"
spec:
  parentRefs:
    - name: external
      namespace: networking
      sectionName: https
  hostnames:
    - "flux-webhook.${PUBLIC_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hook/
      backendRefs:
        - name: webhook-receiver
          port: 80
